# cryptocurrencies-prices

./: .editorconfig  .gitignore  README.md  cryptocurrencies-prices.cabal  stack.yaml
src/: Currency.hs  Main.hs
