name:                cryptocurrencies-prices
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/toastal/cryptocurrencies-prices#readme
license:             MIT
license-file:        LICENSE
author:              toastal
maintainer:          toastal@protonmail.com
copyright:           2017 toastal
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cryptocurrencies-prices
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , lens-aeson
                     , optparse-generic
                     , text
                     , text-format
                     , unordered-containers
                     , wreq
